# PKI-Signing-Service

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  config.example.toml  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  cross-repo-trigger.yml  daily-health.yml  interop.yml  pages.yml  release.yml  security-regression.yml
crates/pki-sign/: Cargo.toml
crates/pki-sign/src/: cab.rs  config.rs  demo.rs  error.rs  ers.rs  lib.rs  main.rs  msi.rs  powershell.rs  signer.rs  timestamp.rs  tsa_server.rs  verifier.rs
crates/pki-sign/src/cert/: info.rs  mod.rs  validate.rs
crates/pki-sign/src/crypto/: rsa_oaep.rs
crates/pki-sign/src/pe/: authenticode.rs  embed.rs  parser.rs
crates/pki-sign/src/pkcs7/: asn1.rs  builder.rs  ecdh.rs  enveloped.rs  ess.rs  kem.rs  mod.rs
crates/pki-sign/src/signer/: file_type.rs  keys.rs  mod.rs  pfx.rs
crates/pki-sign/src/web/: audit.rs  error.rs  gh_issues.rs  handlers.rs  ldap.rs  middleware.rs  mod.rs
crates/pki-sign/static/: admin.html  app.js  index.html  pki_styles.css  verify.html
crates/pki-sign/tests/: pq_feature_gate.rs  release_assets.rs  supply_chain_regression.rs
crates/pki-sign/tests/fixtures/: ecdsa-p256.pfx  ecdsa-p384.pfx  ecdsa-p521.pfx  rsa2048.pfx  rsa3072.pfx  rsa4096.pfx
crates/spork-sign/: Cargo.toml
crates/spork-sign/src/: config.rs  error.rs  ers.rs  lib.rs  main.rs  powershell.rs  signer.rs  tsa_http.rs  verifier.rs
crates/spork-sign/src/crypto/: hkdf.rs  mod.rs  rsa_oaep.rs
crates/spork-sign/src/pe/: mod.rs
crates/spork-sign/src/pkcs7/: builder.rs  digested.rs  mod.rs
crates/spork-sign/src/web/: handlers.rs  middleware.rs  mod.rs
docs/: demo.html  index.html  showcase.html
docs/demos/: quantum-panic.cast  speed-run.cast  the-api.cast  the-auditor.cast  the-heist.cast  the-intern.cast
scripts/: gen-test-certs.sh
tests/fixtures/: test_config_multi.toml
