[workspace]
resolver = "2"
members = ["crates/pki-sign"]

[workspace.package]
version = "0.5.8"
edition = "2021"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/rayketcham-lab/PKI-Signing-Service"

[workspace.dependencies]
# Shared utilities
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
zeroize = { version = "1.8", features = ["derive", "serde"] }
p12-keystore = "0.2"
hex = "0.4"
rand = "0.8"
anyhow = "1"
zip = "2"
csv = "1.3"

# CLI dependencies
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.44", features = ["full"] }

# HTTP server / client
axum = "0.7"
tower-http = { version = "0.5", features = ["trace", "cors", "fs", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls-native-roots", "rustls-tls-webpki-roots", "blocking"], default-features = false }

# Certificate parsing
base64 = "0.22"
der = { version = "0.7", features = ["std"] }

# Testing
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
