[package]
name = "pki-sign"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PKI Signing Service - Pure Rust Code Signing Engine"
repository.workspace = true

[dependencies]
# Async runtime & HTTP server
axum = { workspace = true }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI
clap = { workspace = true }

# Interactive setup
dialoguer = "0.11"
console = "0.15"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }

# Utilities
thiserror = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = { workspace = true }
colored = "3"

# PE/COFF parsing
goblin = { version = "0.9", default-features = false, features = ["pe32", "pe64", "std"] }

# OLE Compound Document (CFB) parsing for MSI signing
cfb = "0.9"

# Crypto - signing
sha1 = "0.10"
sha2 = { version = "0.10", features = ["oid"] }
sha3 = "0.10"
rsa = "0.9"
p256 = { version = "0.13", features = ["ecdsa", "pem"] }
p384 = { version = "0.13", features = ["ecdsa", "pem"] }
p521 = { version = "0.13", features = ["ecdsa", "pem"] }
ed25519-dalek = { version = "2", features = ["pkcs8"] }
ml-dsa = { version = "0.0.4", features = ["pkcs8"], optional = true }
signature = "2"
pkcs8 = { version = "0.10", features = ["pem"] }

# ASN.1/DER encoding for CMS/PKCS#7
der = { workspace = true }
cms = "0.2"
x509-cert = "0.2"
const-oid = "0.9"
spki = "0.7"

# PKCS#12/PFX loading
p12 = "0.6"
p12-keystore = { workspace = true }
zeroize = { workspace = true }
subtle = "2"

# HTTP client (for TSA requests)
reqwest = { workspace = true }

# TLS for HTTPS server
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs", "std"] }
rustls-pemfile = "2"

# File upload handling
axum-extra = { version = "0.9", features = ["multipart"] }

# CIDR matching for trusted_proxies (#63)
ipnet = "2"

# Rate limiting for signing endpoints (#54)
tower = { version = "0.5", features = ["limit"] }

# Temp files
tempfile = "3"

# ZIP archive for batch signing
zip = { workspace = true }

# CSV output for signing summaries
csv = { workspace = true }

# Body-limit error downcasting for multipart → 413 mapping
http-body-util = "0.1"

[features]
default = ["demo"]
# Self-contained `pki-sign demo` subcommand. Embeds a throwaway RSA-2048
# PFX (from tests/fixtures) so new users can watch pki-sign sign + verify
# a Windows PE end-to-end in under a second without needing their own
# cert. Default-on. Exclude for hardened builds with --no-default-features.
demo = []
# Experimental post-quantum signing (ML-DSA / SLH-DSA).
#
# Default-off because the ml-dsa 0.0.4 crate is pre-1.0 and carries open
# timing-side-channel / implementation advisories (RUSTSEC-2025-0144,
# CVE-2026-22705, CVE-2026-24850, GHSA-h37v-hp6w-2pp8). Gating the surface
# keeps those CVEs out of the default build's dep graph entirely.
pq-experimental = ["dep:ml-dsa"]

[dev-dependencies]
tempfile = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
tower = { version = "0.5", features = ["util", "limit"] }
http-body-util = "0.1"
# Real streaming bodies in body-limit regression tests (#74) — exercises the
# `RequestBodyLimitLayer` byte-count path that `Body::from(Vec<u8>)` (a Full
# body) cannot, since Full pre-buffers and short-circuits via Content-Length.
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }

[[bin]]
name = "pki-sign"
path = "src/main.rs"

[lib]
path = "src/lib.rs"
